--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p><b>What is the capital of India?</b></p>
+	<form>
+		<input type="radio" id="newdelhi" value="New Delhi">
+			<label for="newdelhi">New Delhi</label> <br>
+		<input type="radio" id="mumbai" value="Mumbai">
+			<label for="mumbai">Mumbai</label>
+	</form>
+
+	<blockquote style="max-width:600px; margin:10px;
+		padding:15px; border-left:8px solid green;
+		background-color:#f8fffe; font-weight:bold;">New Delhi is the capital of India and an administrative
+	district of NCT Delhi.</blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
