--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
 
 	<blockquote style="max-width:600px; margin:10px;
 		padding:15px; border-left:8px solid green;
-		background-color:#f8fffe; font-weight:bold;">New Delhi is the capital of India and an administrative
-	district of NCT Delhi.</blockquote>
+		background-color:#f8fffe; font-weight:bold;">"New Delhi is the capital of India and an administrative
+	district of NCT Delhi."<cite> -Wikipedia</cite></blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
