--- a/main.html
+++ b/main.html
@@ -16,7 +16,8 @@
 			<label for="mumbai">Mumbai</label>
 	</form>
 
-	<blockquote style="max-width:600px; margin:10px;
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"
+		style="max-width:600px; margin:10px;
 		padding:15px; border-left:8px solid green;
 		background-color:#f8fffe; font-weight:bold;">"New Delhi is the capital of India and an administrative
 	district of NCT Delhi."<cite> -Wikipedia</cite></blockquote>
